# avplanner

./: .pre-commit-config.yaml  get_daily.py  pyproject.toml
.github/workflows/: get-daily-availability.yml
avplanner/: AvailabilityFetcher.py  BookingSuedTirol.py  Bulky.py  RateLimiter.py  Staulanza.py  __init__.py  utils.py
data/: daily.csv  huts.csv
scripts/: get_daily.py
