[project]
name = "avplanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "pytest>=8.3.2",
    "brotli>=1.1.0",
    "beautifulsoup4>=4.12.3",
]


[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.black]
line-length = 79


[tool.ruff]
line-length = 79


[tool.ruff.lint]
select = [
    "E", "F", "I", "NPY", "PYI", "Q", "RET", "RSE", "RUF", "SLF", "SIM", "TCH"
]


[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["tests"]


[tool.mypy]
ignore_missing_imports = true
